--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "1.7.17",
-    "framer-motion": "10.16.4",
-    "next": "14.2.15",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@headlessui/react": "^2.2.9",
+    "framer-motion": "^12.23.24",
+    "fullpage.js": "^4.0.31",
+    "next": "^16.0.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "24.9.1",
     "@types/react": "19.2.2",
-    "autoprefixer": "10.4.16",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.34.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.4.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "5.4.2"
   }
 }
